--- a/Styles/adm_style.css
+++ b/Styles/adm_style.css
@@ -89,4 +89,5 @@ width: 30%;
 	background-image: url(../img/EPIS.png);/* jalar la imagen */
 	background-position: center;
 	background-size: cover;
-		height: 470px;}
+	height: 470px;
+}
